--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
             android:label="@string/title_activity_subscription"
             android:theme="@style/Theme.AppCompat.NoActionBar" />
         <activity android:name=".SettingsActivity" />
+        <activity android:name=".ResetPasswordActivity"></activity>
     </application>
 
 </manifest>
