--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
             android:theme="@style/Theme.AppCompat.NoActionBar" />
         <activity android:name=".SettingsActivity" />
         <activity android:name=".ResetPasswordActivity"></activity>
+        <uses-permission android:name="android.permission.INTERNET" />
     </application>
 
 </manifest>
