--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,9 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
     <application
         android:allowBackup="true"
@@ -31,7 +34,7 @@
             android:theme="@style/Theme.AppCompat.NoActionBar" />
         <activity android:name=".SettingsActivity" />
         <activity android:name=".ResetPasswordActivity"></activity>
-        <uses-permission android:name="android.permission.INTERNET" />
+
     </application>
 
 </manifest>
